--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -33,14 +33,14 @@ history = 12000
 
 [font]
 builtin_box_drawing = false
-size                = 14
+size                = 16
 
 [font.bold]
-family = "Firacode Nerd Font Mono"
+family = "Inconsolata Nerd Font Mono"
 style  = "Bold"
 
 [font.bold_italic]
-family = "Firacode Nerd Font Mono"
+family = "Inconsolata Nerd Font Mono"
 style  = "Bold Italic"
 
 [font.glyph_offset]
@@ -48,76 +48,17 @@ x = 0
 y = 0
 
 [font.italic]
-family = "Firacode Nerd Font Mono"
+family = "Inconsolata Nerd Font Mono"
 style  = "Italic"
 
 [font.normal]
-family = "Firacode Nerd Font Mono"
+family = "Inconsolata Nerd Font Mono"
 style  = "Regular"
 
 [font.offset]
 x = 0
 y = 0
 
-[colors.primary]
-background = "#232323"
-foreground = "#C0C5CE"
-
-[colors.bright]
-black   = "#5C5C5C"
-blue    = "#6699CC"
-cyan    = "#5FB3B3"
-green   = "#A6BC99"
-magenta = "#824F82"
-red     = "#E57373"
-white   = "#F3F4F5"
-yellow  = "#FAC863"
-
-[colors.cursor]
-cursor = "CellForeground"
-text   = "CellBackground"
-
-[colors.footer_bar]
-background = "#C0C5CE"
-foreground = "#232323"
-
-[colors.hints.end]
-background = "CellBackground"
-foreground = "CellForeground"
-
-[colors.hints.start]
-background = "CellBackground"
-foreground = "CellForeground"
-
-[colors.line_indicator]
-background = "None"
-foreground = "None"
-
-[colors.normal]
-black   = "#232323"
-blue    = "#6699CC"
-cyan    = "#5FB3B3"
-green   = "#A6BC99"
-magenta = "#824F82"
-red     = "#E57373"
-white   = "#C0C5CE"
-yellow  = "#FAC863"
-
-[colors.search.focused_match]
-background = "CellBackground"
-foreground = "CellForeground"
-
-[colors.search.matches]
-background = "CellBackground"
-foreground = "CellForeground"
-
-[colors.selection]
-background = "CellForeground"
-text       = "CellBackground"
-
-[colors.vi_mode_cursor]
-cursor = "CellForeground"
-text   = "CellBackground"
 
 [bell]
 animation = "EaseOutExpo"
