--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -11,6 +11,9 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# reload config
+bind r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded..."
+
 # Start windows and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
@@ -31,15 +34,15 @@ bind -n S-Right next-window
 bind -n M-H previous-window
 bind -n M-L next-window
 
-set -g @catppuccin_flavour 'mocha'
-
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 run '~/.config/tmux/plugins/tpm/tpm'
+
+set -g @catppuccin_flavour 'macchiato'
 
 # set vi-mode
 set-window-option -g mode-keys vi
