--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -32,32 +32,40 @@ y = 12
 history = 12000
 
 [font]
-builtin_box_drawing = false
-size                = 16
+builtin_box_drawing = true
+size                = 13
 
-[font.bold]
-family = "Inconsolata Nerd Font Mono"
-style  = "Bold"
-
-[font.bold_italic]
-family = "Inconsolata Nerd Font Mono"
-style  = "Bold Italic"
+[font.offset]
+x = 1
+y = 0
 
 [font.glyph_offset]
 x = 0
 y = 0
 
+[font.bold]
+family = "RobotoMono Nerd Font"
+#family = "MesloLGS NF"
+#family = "Inconsolata Nerd Font Mono"
+style  = "Bold"
+
+[font.bold_italic]
+family = "RobotoMono Nerd Font"
+#family = "MesloLGS NF"
+#family = "Inconsolata Nerd Font Mono"
+style  = "Bold Italic"
+
 [font.italic]
-family = "Inconsolata Nerd Font Mono"
+family = "RobotoMono Nerd Font"
+#family = "MesloLGS NF"
+#family = "Inconsolata Nerd Font Mono"
 style  = "Italic"
 
 [font.normal]
-family = "Inconsolata Nerd Font Mono"
+#family = "MesloLGS NF"
+#family = "Inconsolata Nerd Font Mono"
+family = "RobotoMono Nerd Font"
 style  = "Regular"
-
-[font.offset]
-x = 0
-y = 0
 
 
 [bell]
