--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -17,7 +17,8 @@ decorations     = "Full"
 dynamic_padding = false
 dynamic_title   = true
 opacity         = 1.0
-startup_mode    = "Maximized"
+startup_mode    = "Windowed"
+#startup_mode    = "SimpleFullscreen"
 title           = "Alacritty"
 
 [window.dimensions]
