--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -36,22 +36,20 @@ bind -n S-Right next-window
 bind -n M-H previous-window
 bind -n M-L next-window
 
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
+# window tabs
+set -g @catppuccin_window_right_separator "█ "
 set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_middle_separator " | "
+set -g @catppuccin_window_left_separator "█"
+set -g @catppuccin_window_default_fill "none"
+set -g @catppuccin_window_current_fill "all"
 
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
-
+# status info
 set -g @catppuccin_status_modules_right "user host session"
 set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
+set -g @catppuccin_status_right_separator " "
+set -g @catppuccin_status_fill "all"
+set -g @catppuccin_status_connect_separator "yes"
 
 set -g @catppuccin_directory_text "#{pane_current_path}"
 set -g @catppuccin_flavour 'macchiato'
