--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -81,7 +81,10 @@ semantic_escape_chars = ",│`|:\"' ()[]{}<>\t"
 
 [cursor]
 unfocused_hollow = true
-vi_mode_style    = "None"
+vi_mode_style    = "Block"
+
+[cursor.style]
+shape = "Beam"
 
 [[keyboard.bindings]]
 action = "Paste"
