--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -11,9 +11,6 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# reload config
-bind r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded..."
-
 # Start windows and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
@@ -42,7 +39,9 @@ set -g @catppuccin_window_number_position "right"
 set -g @catppuccin_window_middle_separator " | "
 set -g @catppuccin_window_left_separator "█"
 set -g @catppuccin_window_default_fill "none"
+set -g @catppuccin_window_default_text "#{b:pane_current_path}"
 set -g @catppuccin_window_current_fill "all"
+set -g @catppuccin_window_current_text "#{b:pane_current_path}"
 
 # status info
 set -g @catppuccin_status_modules_right "user host session"
